--- a/Frontend/app/src/main/res/values/colors.xml
+++ b/Frontend/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="primaryBlue">#2196F3</color>
+    <color name="primaryDarkBlue">#1976D2</color>
+    <color name="accentBlue">#64B5F6</color>
+    <color name="white">#FFFFFF</color>
 </resources>
