--- a/Frontend/app/src/main/res/values/styles.xml
+++ b/Frontend/app/src/main/res/values/styles.xml
@@ -1,3 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/primaryBlue</item>
+        <item name="colorPrimaryDark">@color/primaryDarkBlue</item>
+        <item name="colorAccent">@color/accentBlue</item>
+        <item name="android:windowBackground">@color/white</item>
+    </style>
 </resources>
