--- a/Frontend/app/src/main/res/layout/activity_signup.xml
+++ b/Frontend/app/src/main/res/layout/activity_signup.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_signup"
-    tools:context="edu.uit.pfeapp.auth.SignupActivity">
+    tools:context=".SignupActivity">
 
     <!-- Logo -->
     <ImageView
