--- a/Frontend/app/src/main/res/values/colors.xml
+++ b/Frontend/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="accentBlue">#64B5F6</color>
     <color name="white">#FFFFFF</color>
     <color name="errorRed">#FF3B30</color> <!-- Couleur pour les règles du mot de passe -->
+
+    <color name="successGreen">#4CAF50</color>
 </resources>
