affichage list etudiants/encadrants

--- a/Frontend/app/src/main/res/layout/dialog_affect_student.xml
+++ b/Frontend/app/src/main/res/layout/dialog_affect_student.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/main"
+    android:padding="16dp"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tabLayout"
+    <EditText
+        android:id="@+id/editEncadrantId"
+        android:hint="ID de l'encadrant"
+        android:inputType="number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/viewPager"
+    <Button
+        android:id="@+id/btnAffect"
+        android:text="Affecter"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_height="wrap_content"/>
 </LinearLayout>
