ajouter le  filtrage pour etudiants/encadrants

--- a/Frontend/app/src/main/res/layout/fragment_encadrants.xml
+++ b/Frontend/app/src/main/res/layout/fragment_encadrants.xml
@@ -1,10 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="8dp">
 
+    <!-- ===== ZONE FILTRAGE ===== -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <EditText
+            android:id="@+id/editFilterName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Nom / Prénom" />
+
+        <EditText
+            android:id="@+id/editFilterDepartement"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Département" />
+
+        <EditText
+            android:id="@+id/editFilterNbrEtudiants"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Nombre d'étudiants encadrés"
+            android:inputType="number"/>
+    </LinearLayout>
+
+    <!-- ===== LISTE DES ENCADRANTS ===== -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerEncadrants"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-</FrameLayout>
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+</LinearLayout>
