--- a/Frontend/app/src/main/res/layout/item_student.xml
+++ b/Frontend/app/src/main/res/layout/item_student.xml
@@ -30,6 +30,14 @@
             android:id="@+id/textFiliere"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/textEncadrant"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textStyle="italic"
+            android:textColor="#555"
+            android:visibility="gone"/>
+
     </LinearLayout>
 
     <!-- Colonne 2: Statut -->
