--- a/Frontend/app/src/main/res/layout/item_etudiant.xml
+++ b/Frontend/app/src/main/res/layout/item_etudiant.xml
@@ -1,35 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="12dp"
-    android:layout_marginBottom="10dp"
+    android:layout_marginBottom="8dp"
     android:background="@color/white"
-    android:elevation="2dp">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/txtNom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:textSize="16sp"
-        android:textColor="@color/primaryDarkBlue"/>
+        android:textColor="@color/primaryDarkBlue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/txtSujet"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:textColor="@color/primaryBlue"
-        android:paddingTop="4dp"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:id="@+id/txtEntreprise"
+        android:textColor="@android:color/darker_gray"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:id="@+id/txtDates"
+        android:textColor="@android:color/darker_gray"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
     <Button
         android:id="@+id/btnEncadrer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:text="Encadrer"
-        android:layout_marginTop="8dp"
         android:backgroundTint="@color/primaryDarkBlue"
-        android:textColor="@color/white"/>
+        android:textColor="@color/white"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
