--- a/Frontend/app/src/main/res/layout/content_etudiant_profile.xml
+++ b/Frontend/app/src/main/res/layout/content_etudiant_profile.xml
@@ -1,19 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+    android:padding="20dp">
 
-    <fragment
-        android:id="@+id/nav_host_fragment_content_etudiant_profile"
-        android:name="androidx.navigation.fragment.NavHostFragment"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:defaultNavHost="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/nav_graph4" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Profil Étudiant"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            android:layout_gravity="center"
+            android:layout_marginBottom="20dp" />
+
+        <TextView
+            android:id="@+id/tvNom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nom :" />
+
+        <TextView
+            android:id="@+id/tvPrenom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Prénom :" />
+
+        <TextView
+            android:id="@+id/tvEmail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Email :" />
+
+        <TextView
+            android:id="@+id/tvFiliere"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Filière :" />
+
+        <TextView
+            android:id="@+id/tvDepartement"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Département :" />
+
+        <TextView
+            android:id="@+id/tvAppogee"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Appogée :" />
+
+        <TextView
+            android:id="@+id/tvRole"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Rôle :" />
+
+    </LinearLayout>
+</ScrollView>
