--- a/Frontend/app/src/main/res/layout/activity_encadrant.xml
+++ b/Frontend/app/src/main/res/layout/activity_encadrant.xml
@@ -1,30 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:padding="12dp"
-    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:text="Liste des étudiants disponibles"
-
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:textColor="@color/primaryDarkBlue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    <Spinner
-        android:id="@+id/spinnerFiliere"
+    <!-- Menu onglets -->
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"/>
+        app:tabIndicatorColor="@color/primaryDarkBlue"
+        app:tabSelectedTextColor="@color/primaryDarkBlue"
+        app:tabTextColor="@color/primaryBlue"/>
 
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerEtudiants"
+    <!-- Contenu -->
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
 </LinearLayout>
