ajout d'implementation de button affecter/reafecter par admin

--- a/Frontend/app/src/main/res/layout/dialog_affect_student.xml
+++ b/Frontend/app/src/main/res/layout/dialog_affect_student.xml
@@ -6,9 +6,9 @@
     android:layout_height="wrap_content">
 
     <EditText
-        android:id="@+id/editEncadrantId"
-        android:hint="ID de l'encadrant"
-        android:inputType="number"
+        android:id="@+id/editCodeProf"
+        android:hint="Code Prof"
+        android:inputType="text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
