ajout d'implementation de button ajouter/supprimer un etudiant pour un encadrant selectionne par admin

--- a/Frontend/app/src/main/res/layout/fragment_encadrants.xml
+++ b/Frontend/app/src/main/res/layout/fragment_encadrants.xml
@@ -31,10 +31,12 @@
             android:inputType="number"/>
     </LinearLayout>
 
-    <!-- ===== LISTE DES ENCADRANTS ===== -->
+    <!-- ===== LISTE DES ENCADRANTS (SCROLL ACTIF) ===== -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerEncadrants"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:scrollbars="vertical"
+        android:overScrollMode="always"/>
 </LinearLayout>
