--- a/Frontend/app/src/main/res/layout/dialog_programmer_soutenance.xml
+++ b/Frontend/app/src/main/res/layout/dialog_programmer_soutenance.xml
@@ -1,6 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:padding="12dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/txtEtudiant"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Programmer la soutenance"
+        android:textStyle="bold"
+        android:textSize="16sp"
+        android:paddingBottom="8dp"/>
+
+    <Spinner
+        android:id="@+id/spinnerSalles"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <Button
+        android:id="@+id/btnDebutPicker"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Sélectionner date/heure début"
+        android:layout_marginTop="8dp"/>
+
+    <Button
+        android:id="@+id/btnFinPicker"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Sélectionner date/heure fin"
+        android:layout_marginTop="4dp"/>
+
+    <Button
+        android:id="@+id/btnConfirm"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Confirmer"
+        android:layout_marginTop="10dp"/>
+</LinearLayout>
