--- a/Frontend/app/src/main/res/layout/item_etudiant_soutenance.xml
+++ b/Frontend/app/src/main/res/layout/item_etudiant_soutenance.xml
@@ -1,6 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:padding="8dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="?android:attr/selectableItemBackground">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/txtNomEtudiant"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Nom"
+        android:textSize="16sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/txtFiliereEtudiant"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Filiere"
+        android:textSize="14sp" />
+
+
+    <TextView
+        android:id="@+id/txtSujetProjet"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sujet"/>
+
+    <TextView
+        android:id="@+id/txtEntrepriseProjet"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Entreprise"/>
+
+    <TextView
+        android:id="@+id/txtDatesProjet"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Date début → Date fin"
+        android:textStyle="italic"/>
+
+    <Button
+        android:id="@+id/btnProgrammer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Programmer soutenance"
+        android:layout_marginTop="8dp"/>
+
+
+</LinearLayout>
